1999-11-10  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf-io.c (gdk_pixbuf_load_module): removed spurious
	print statements.

1999-11-10  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): Added
	documentation.

1999-11-09  Federico Mena Quintero  <federico@redhat.com>

	* src/io-png.c: Fixed some incompatible pointer initializations.

	* src/io-jpeg.c (image_load_increment): Remove unused variable.

1999-11-09  Michael Fulbright  <drmike@redhat.com>

        * src/testpixbuf.c: Fixed it to use timeout to read from file
	for progressive loading. Set TBF_KBPS=n, where n is the number of
	kilobytes/second to simulate in downloading. n has to be an integer.
	
	* src/io-jpeg.c: Slight cosmetic cleanup.

	* src/io-pnm.c: Fixed raw PNM loading bug. Also discovered that ASCII
        PBM loading has a similar problem and will address tomorrow.
	
1999-11-09  Havoc Pennington  <hp@pobox.com>

	* src/Makefile.am (libgdk_pixbuf_la_SOURCES): build the
	gdk-pixbuf-drawable stuff.

1999-11-09  Federico Mena Quintero  <federico@redhat.com>

	* configure.in: Bumped version number to 0.4.

1999-11-09  Michael Fulbright  <drmike@redhat.com>

	* src/io-pnm.c : Finished progressive PNM loading code. Should handle
	all types of PNM files now.

	* src/io-jpeg.c (image_load_increment): Figured out problem with
	loading Progressive JPEG's progressively (say that 10 times fast).
	Currently for Progressive JPEG's the entire image is loaded before
	it is displayed. libjpeg supports a fancier mechanism which I may
	implement later.

	With these changes all JPEG formats appear to load properly for me.
	
1999-11-08  Jonathan Blandford  <jrb@redhat.com>

	* src/io-ras.c (image_load_increment): Final patch from Arjan.
	Seems to do progressive loading.

1999-11-08  Michael Fulbright  <drmike@redhat.com>

	* src/io-pnm.c image_load (): Fixed so we do not create a separate
	pixel buffer when reading in image - we reuse the pixel data in